--- a/index.html
+++ b/index.html
@@ -31,7 +31,17 @@
            </div>
             </div>
               </article>
-      
+       <article class="cartao" >
+            <div class="cartao__conteudo"> 
+              <h3>Geografia</h3>
+              <div class="cartao__conteudo__pergunta">
+              <p>Qual a capital da França?</p>
+           </div>
+           <div class="cartao__conteudo__resposta">
+            <p> A capital da França é Paris</p>                  
+           </div>
+            </div>
+              </article>
 
         </section>
     </main>
