--- a/index.html
+++ b/index.html
@@ -49,5 +49,6 @@
     <footer>
         <p>Projeto desenvolvido pela Alura, sem fins lucrativos</p>
     </footer>
+    <script src="pergunta.js"></script>
 </body>
 </html>
